correcao carregamento de imagens

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="header">
-    <img src="/IMG/bikcraft.svg" alt="logo">
+    <img src="./img/bikcraft.svg" alt="logo">
     <nav>
       <ul class="menu">
         <li><a href="">Sobre</a></li>
@@ -30,7 +30,7 @@
         <a class="botao" href="">Ver Mais</a>
       </div>
       <div class="cover">
-        <img class="foto" src="/IMG/bicicleta-1200-800.jpg" alt="Bicicleta Preta">
+        <img class="foto" src="./img/bicicleta-1200-800.jpg" alt="Bicicleta Preta">
       </div>
     </article>
 
@@ -39,17 +39,17 @@
 
       <div class="Vantagens">
         <div class="vantagens-item">
-          <img src="/IMG/" alt="">
+          <img src="./img/" alt="">
           <h3>Motor Elétrico</h3>
           <p>Permite Voce viajar distâncias inimaginaveis com sua bike.</p>
         </div>
         <div class="vantagens-item">
-          <img src="/IMG/" alt="">
+          <img src="./img/" alt="">
           <h3>40/km/h</h3>
           <p>A mais rápida bicicleta elétrica disponivel hoje no mercado.</p>
         </div>
         <div class="vantagens-item">
-          <img src="/IMG/" alt="">
+          <img src="./img/" alt="">
           <h3>Rastreador</h3>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
         </div>
