--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 
 <body>
+  <h1 style="display: none;">Bikecraft</h1>
   <header class="header">
     <img src="./img/bikcraft.svg" alt="logo">
     <nav>
       <ul class="menu">
-        <li><a href="">Sobre</a></li>
-        <li><a href="">Lojas</a></li>
-        <li><a href="">Contato</a></li>
-        <li><a href="">Produtos</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#lojas">Lojas</a></li>
+        <li><a href="#contato">Contato</a></li>
+        <li><a href="#produto">Produtos</a></li>
       </ul>
     </nav>
   </header>
