reestruturacao de pastas

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Bikecrafit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>Bikecraft - Bicicletas feitas a mão</title>
+  <script src="./assets/js/script.js"></script>
 </head>
 
 <body>
   <h1 style="display: none;">Bikecraft</h1>
   <header class="header">
-    <img src="./img/bikcraft.svg" alt="logo">
+    <img src="./assets/img/bikcraft.svg" alt="logo">
     <nav>
       <ul class="menu">
         <li><a href="#sobre">Sobre</a></li>
@@ -29,10 +30,10 @@
         <span class="detalhe"></span>
         <h1>Bicicletas Feitas a Mão.</h1>
         <p>A nimbus Stark é a melhor Bikcreft já criada pela nossa equipe. Ela vem equipada com os melhores acessorios da marca.</p>
-        <a class="botao" href="">Ver Mais</a>
+        <a class="botao" href="" onclick="handleOnload();">Ver Mais</a>
       </div>
       <div class="cover">
-        <img class="foto" src="./img/bicicleta-1200-800.jpg" alt="Bicicleta Preta">
+        <img class="foto" src="./assets/img/bicicleta-1200-800.jpg" alt="Bicicleta Preta">
       </div>
     </article>
 
@@ -41,17 +42,14 @@
 
       <div class="Vantagens">
         <div class="vantagens-item">
-          <img src="./img/" alt="">
           <h3>Motor Elétrico</h3>
           <p>Permite Voce viajar distâncias inimaginaveis com sua bike.</p>
         </div>
         <div class="vantagens-item">
-          <img src="./img/" alt="">
           <h3>40/km/h</h3>
           <p>A mais rápida bicicleta elétrica disponivel hoje no mercado.</p>
         </div>
         <div class="vantagens-item">
-          <img src="./img/" alt="">
           <h3>Rastreador</h3>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
         </div>
